VO-3505 - Fixed accordion button text wrapping issue

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -35,6 +35,10 @@ body.lang_es {
         width: 80%;
       }
     }
+
+    .accordion-button {
+      width: 340px;
+    }
   }
 
 
